# AFB-BF-protocol

./: .gitignore  CHANGELOG.md  README.md  VERSIONING.md  package-lock.json  package.json
python/: pyproject.toml
python/afb_bf_protocol/: __init__.py  alarm_display.py  amend_rules.py  capabilities.py  condition_semantics.py  deal_state.py  enrollment.py  envelope.py  models.py  models_generated.py  payload_validation.py  signing.py  taxonomy.py  validation.py  version.py
python/afb_bf_protocol/schemas/: README.md  alarm.v1.json  condition.v1.json  deal.v1.json  deal.v2.json  deal_state.v2.json  notification.deal.v1.json  tradeplan.v1.json  tradeplan.v2.json
python/afb_bf_protocol/schemas/afbws/: account.instrument.v1.json  account.snapshot.v1.json  alarm.channel.v1.json  bf_registry_entry.v1.json  bfs.registry.v1.json  connector.list.v1.json  connector.record.v1.json  deal.event.v1.json  link.channel.v1.json  link.status.v1.json
python/afb_bf_protocol/schemas/payloads/: daemon.capabilities.json  daemon.status.json  deal.accepted.json  deal.archived.json  (+8 more)
python/afb_bf_protocol/tools/: __init__.py  generate.py  make_fixtures.py
python/tests/: conftest.py  test_afbws_alarm_channel_schema.py  test_afbws_gp_channel_schema.py  test_afbws_link_channel_schema.py  test_afbws_tradeplan_channel_schema.py  test_alarm_display.py  test_alarm_schema.py  test_amend_rules.py  test_capabilities_sync.py  test_condition_schema.py  test_condition_semantics.py  test_deal_notification_schema.py  test_deal_state.py  test_deal_state_order_schema.py  test_enrollment.py  test_equivalence.py  test_fixtures_schema.py  test_gp_schema.py  test_link_notification_schema.py  test_notification_schema.py  test_payload_validation.py  test_pymodels_sync.py  test_roundtrip.py  test_schemas_pkg_sync.py  test_session_margin_trading_schema.py  test_signing.py  test_taxonomy_spec_sync.py  test_tradeplan_schema.py  test_ts_models_sync.py  test_ts_taxonomy_sync.py
(+149 files in other folders)
