[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afb-bf-protocol"
version = "1.9.0"
description = "Shared wire protocol (afb.execution.v1) for AFB OMS and BF executor: models, envelope, signing, validation, taxonomy"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
# Runtime payload (tradeplan/deal) validation via the packaged JSON Schemas.
# Consumers that only need envelope/signing (e.g. BF) don't need this.
validation = [
  "jsonschema>=4.20",
]
# Codegen / linting / tests. Not needed at runtime by AFB or BF.
dev = [
  "pytest>=8.0",
  "jsonschema>=4.20",
  "pyyaml>=6.0",
  "datamodel-code-generator>=0.25",
]

[project.scripts]
afb-bf-protocol-generate = "afb_bf_protocol.tools.generate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["afb_bf_protocol*"]

[tool.setuptools.package-data]
afb_bf_protocol = ["schemas/*.json", "schemas/**/*.json", "schemas/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
